src/test/deca/context/invalid/resultats/test8_not3-cont.res
./src/test/deca/context/invalid/test8_not3.deca:17:1: Not operator must be applied on a boolean expression (current type : string)
